--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,8 +1,16 @@
-EXTRA_DIST = $(strip \
-	bse-categories.txt \
-	bse-data-v1.txt \
+public_docs = $(strip \
 	bse-heart.txt \
 	bse-networks.txt \
-	bse-typesystem.txt \
 	faq.txt \
 )
+private_docs = $(strip \
+	bse-categories.txt \
+	bse-data-v1.txt \
+	bse-typesystem.txt \
+)
+
+docsdir = ${beastdocsdir}
+docs_DATA = ${public_docs}
+
+
+EXTRA_DIST = ${public_docs} ${private_docs}
