moved the BseGConfig object from bseglobals.[hc]. implement object
Sun Jan  9 12:49:29 2000  Tim Janik  <timj@gtk.org>

        * bsegconfig.[hc]: moved the BseGConfig object from bseglobals.[hc].
        implement object functions as methods in class so they can be overridden.

        * bseglobals.[hc]: cleanups, provide private interface for BseGConfig.

        * bseenums.[hc] (bse_error_from_errno): new function to map errno values
        to BSE_ERROR_* values.

svn path=/trunk/; revision=140

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -62,6 +62,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseeffectvolumedelta.h \
 	bseenums.h \
 	bseexports.h \
+	bsegconfig.h \
 	bseglobals.h \
 	bseheart.h \
 	bseinstrument.h \
@@ -107,6 +108,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseeffectpatternjump.c \
 	bseeffectvolumedelta.c \
 	bseenums.c \
+	bsegconfig.c \
 	bseglobals.c \
 	bseheart.c \
 	bseinstrument.c \
