implemented BEAST configuration settings with a BstGlobals struct and a
Sun Jan  9 12:51:23 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstgconfig.[hc]: implemented BEAST configuration settings
          with a BstGlobals struct and a BstGConfig object.

        * beast-gtk/bstpreferences.[hc]: feature BstGConfig object by adding a
          notebook page for the object settings derived frmo BSE_TYPE_GCONFIG.

        * beast-gtk/main.c: cache the keytable in the config settings, so we
        don't need to requery it upon every startup (and risk triggering the
        XKB bugs).
        (bst_key_table_from_xkb_symbol): seperated out the xkb_symbol->keypatch
        logic from bst_key_table_from_xkb().

Sun Jan  9 07:28:49 2000  Tim Janik  <timj@gtk.org>

        * NEWS: updates for version 0.3.1.

        * configure.in: up to version 0.3.1.

svn path=/trunk/; revision=141

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -34,6 +34,7 @@ beast_headers = $(strip \
 	bstdefs.h \
 	bstfiledialog.h \
 	bstfreeradiobutton.h \
+	bstgconfig.h \
 	bstheartmonitor.h \
 	bstinstrumentview.h \
 	bstitemview.h \
@@ -64,6 +65,7 @@ beast_sources = $(strip \
 	bstcanvassource.c \
 	bstfiledialog.c \
 	bstfreeradiobutton.c \
+	bstgconfig.c \
 	bstheartmonitor.c \
 	bstinstrumentview.c \
 	bstitemview.c \
