grrr, automake me harder. masochismus
svn path=/trunk/; revision=150

--- a/configure.in
+++ b/configure.in
@@ -373,6 +373,7 @@ AC_SUBST(MISSING_INDENT)
 AC_SUBST(MISSING_ETAGS)
 AC_SUBST(BIRNET_Y)
 AC_SUBST(BIRNET_N)
+AM_CONDITIONAL(IF_HAVE_PERL5, test -z "$MISSING_PERL5")
 
 # Automake @VARIABLE@ exports.
 AC_SUBST(CFLAGS)
