new object, taking over part of BsePcmDevice's responsibilities as its
Thu Jan 13 18:12:51 2000  Tim Janik  <timj@gtk.org>

        * bsedevice.[hc]: new object, taking over part of BsePcmDevice's
        responsibilities as its parent type.

        * bsepcmdevice.[hc]:
        * bsepcmdevice-oss.[hc]:
        * bsepcmdevice-alsa.[hc]: minor adaptions because of the hirarchy
        change.

svn path=/trunk/; revision=151

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -54,6 +54,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseconfig.h \
 	bsecontainer.h \
 	bsedefs.h \
+	bsedevice.h \
 	bseeffect.h \
 	bseeffectfinetune.h \
 	bseeffectnotevolume.h \
@@ -101,6 +102,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsecategories.c \
 	bsechunk.c \
 	bsecontainer.c \
+	bsedevice.c \
 	bseeffect.c \
 	bseeffectfinetune.c \
 	bseeffectnotevolume.c \
