//beast.gtk.org.
Fri Jan 14 15:06:29 2000  Tim Janik  <timj@gtk.org>

        * released beast-0.3.1.tar.gz on http://beast.gtk.org.

svn path=/trunk/; revision=155

--- a/PKG_config.h.in
+++ b/PKG_config.h.in
@@ -21,3 +21,6 @@
 #undef  BST_WITH_GDK_PIXBUF
 #undef  BSE_PCM_DEVICE_CONF_ALSA
 #undef  BSE_PCM_DEVICE_CONF_OSS
+
+/* Define if you have the snd_pcm_channel_flush function.  */
+#undef HAVE_SND_PCM_CHANNEL_FLUSH
