new source which will mix up to four input channels at specified volumes
Sat Jan 15 19:51:16 2000  Tim Janik  <timj@gtk.org>

        * bsemixer.[hc]: new source which will mix up to four input channels
        at specified volumes together.

        * *.c: adapted a couple plugins to include bsehunkmixer.h and make use
        of bse_hunk_clip_mix_buffer(). enforced usage of BSE_MAX_SAMPLE_VALUE
        instead of hardcoded numbers.

svn path=/trunk/; revision=158

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -51,6 +51,14 @@ bseloopback_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS         += bseloopback.h
 
 ##
+## Plugin bsemixer
+##
+bsemixer_la_SOURCES = bsemixer.c
+bsemixer_la_LDFLAGS = -module -avoid-version
+bsemixer_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS         += bsemixer.h
+
+##
 ## Plugin bsemult
 ##
 bsemult_la_SOURCES = bsemult.c
@@ -88,6 +96,7 @@ plugin_LTLIBRARIES += \
 	bsefirfilter.la \
 	bsegenosc.la \
 	bseloopback.la \
+	bsemixer.la \
 	bsemult.la \
 	bsenoise.la \
 	greeting.la \
