--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -1,5 +1,6 @@
 ## Generated data (by make Makefile.icons)
 icon_list += amp.c
+icon_list += ampmix.c
 icon_list += any.c
 icon_list += atan.c
 icon_list += mic.c
@@ -11,6 +12,7 @@ icon_list += speaker.c
 icon_list += sub.c
 icon_list += sum.c
 icon_list += amp.xcf
+icon_list += ampmix.xcf
 icon_list += atan.xcf
 icon_list += mic.xcf
 icon_list += noicon.xcf
