incorporated changes from Dave Seidel <dave@superluminal.com>: # 14 Jan
Sun Jan 16 00:24:31 2000  Tim Janik  <timj@gtk.org>

        * docs/Makefile.am:
        * docs/makefaq.py: incorporated changes from Dave Seidel
        <dave@superluminal.com>:
        # 14 Jan 2000 - added command line processing, error handling,
        #               comments

Sat Jan 15 23:54:40 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.c (toolbar_add_radio): instead of stripping
        "Bse" from the toolbar buttons, strip any kind of namespace prefix.

svn path=/trunk/; revision=162

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -22,8 +22,8 @@ docsdir = ${beastdocsdir}
 docs_DATA = ${public_docs}
 
 
-faq.txt: @MISSING_PYTHON@ @MISSING_FOLD@ faq.src
-	python makefaq.py | fold -s > faq.txt
+faq.txt: @MISSING_PYTHON@ @MISSING_FOLD@ faq.src makefaq.py
+	python makefaq.py -c Text | fold -s > faq.txt
 
 MAINTAINERCLEANFILES += $(built_sources)
 
