added DavSynDrum module, a synthesized drum generator, provided by David
Mon Jan 17 11:15:37 2000  Tim Janik  <timj@gtk.org>

        * davsyndrum.[hc]: added DavSynDrum module, a synthesized drum
        generator, provided by David A. Bartold <foxx@mail.utexas.edu>
        (minor updates from my part to honour BSE_MIX_FREQ after _prepare()
        and to adjust parameter resolutions).

        * davorgan.c (dav_organ_set_param): fixed a minor bug i introduced.

svn path=/trunk/; revision=165

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -83,6 +83,14 @@ davorgan_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS         += davorgan.h
 
 ##
+## Plugin davsyndrum
+##
+davsyndrum_la_SOURCES = davsyndrum.c
+davsyndrum_la_LDFLAGS = -module -avoid-version
+davsyndrum_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS         += davsyndrum.h
+
+##
 ## Plugin greeting
 ##
 greeting_la_SOURCES = greeting.c
@@ -108,6 +116,7 @@ plugin_LTLIBRARIES += \
 	bsemult.la \
 	bsenoise.la \
 	davorgan.la \
+	davsyndrum.la \
 	greeting.la \
 	hello-space.la
 
