popup sample shell. (bst_app_new): auto-update GUI when supers got added
Sun Jan 16 07:33:35 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c (bst_app_add_super): popup sample shell.
        (bst_app_new): auto-update GUI when supers got added to/removed
        from the project.
        (bst_app_reload_supers): don't unecessarily destroy widgets,
        remeber old page.

        * beast-gtk/bstsampleshell.[hc]: new sample shell widget (features
        nothing more than a paramview yet).

svn path=/trunk/; revision=166

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -48,6 +48,7 @@ beast_headers = $(strip \
 	bstpreferences.h \
 	bstprocedure.h \
 	bstsamplerepo.h \
+	bstsampleshell.h \
 	bstsnetshell.h \
 	bstsnetrouter.h \
 	bstsongshell.h \
@@ -80,6 +81,7 @@ beast_sources = $(strip \
 	bstpreferences.c \
 	bstprocedure.c \
 	bstsamplerepo.c \
+	bstsampleshell.c \
 	bstsnetshell.c \
 	bstsnetrouter.c \
 	bstsongshell.c \
