altered GdkPixbuf check to feature -lgdk_pixbuf and optionally
Fri Jan 21 02:45:14 2000  Tim Janik  <timj@gtk.org>

        * configure.in: altered GdkPixbuf check to feature -lgdk_pixbuf and
        optionally -lgnomecanvaspixbuf.

Thu Jan 20 00:27:53 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c (bst_subwindow_new): feature BstSubWindowFlags to
        configure specific aspects (e.g. destroy_on_hide).

        * beast-gtk/bstapp.c (bst_app_operate): destroy help windows when
        closed.

svn path=/trunk/; revision=175

--- a/configure.in
+++ b/configure.in
@@ -104,6 +104,34 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     bseplugindir=$bselibdir/plugins
     AC_SUBST(bseplugindir)
 ])
+AC_DEFUN(AC_BEAST_PIXBUF_CHECK,
+[
+    dnl check for GkPixbuf
+    dnl this check assumes that gdk_pixbuf.la is installed in some
+    dnl standard path, e.g. /usr or /usr/local
+    AC_MSG_CHECKING(for GdkPixbuf Library in $1)
+    have_gdk_pixbuf=no
+    cflags=$CFLAGS
+    ldflags=$LDFLAGS
+    CFLAGS=$BEAST_CFLAGS
+    LDFLAGS="$1 $BEAST_LIBS"
+    AC_TRY_LINK([
+#include <gdk-pixbuf/gdk-pixbuf.h>
+#include <gdk-pixbuf/gnome-canvas-pixbuf.h>
+    ],[{
+  gdk_pixbuf_new_from_art_pixbuf (NULL);
+  gnome_canvas_pixbuf_get_type ();
+    }],[
+	AC_MSG_RESULT([found it, great!])
+	AC_DEFINE_UNQUOTED(BST_WITH_GDK_PIXBUF)
+	BEAST_LIBS="$1 $BEAST_LIBS"
+	have_gdk_pixbuf=yes
+    ],[
+	AC_MSG_RESULT([failed - reverting to GnomeCanvasImage])
+    ])
+    CFLAGS=$cflags
+    LDFLAGS=$ldflags
+])
 AC_DEFUN(AC_BEAST_REQUIREMENTS,
 [
     dnl Check for Gtk+
@@ -149,29 +177,13 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
 	AC_MSG_ERROR(Cannot find GNOME - gnome-config missing from path?)
     fi
 
-    dnl check for -lgdk_pixbuf
-    dnl this check assumes that gdk_pixbuf.la is installed in some
-    dnl standard path, e.g. /usr or /usr/local
-    AC_MSG_CHECKING(for GdkPixbuf Library)
-    cflags=$CFLAGS
-    ldflags=$LDFLAGS
-    CFLAGS=$BEAST_CFLAGS
-    LDFLAGS="-lgdk_pixbuf $BEAST_LIBS"
-    AC_TRY_LINK([
-#include <gdk-pixbuf/gdk-pixbuf.h>
-#include <gdk-pixbuf/gnome-canvas-pixbuf.h>
-],[{
-  gdk_pixbuf_new_from_art_pixbuf (NULL);
-  gnome_canvas_pixbuf_get_type ();
-}],[
-	AC_MSG_RESULT([found it, great!])
-	AC_DEFINE_UNQUOTED(BST_WITH_GDK_PIXBUF)
-	BEAST_LIBS="-lgdk_pixbuf $BEAST_LIBS"
-],[
-	AC_MSG_RESULT([failed - reverting to GnomeCanvasImage])
-])
-    CFLAGS=$cflags
-    LDFLAGS=$ldflags
+    dnl check for GdkPixbuf (with -lgdk_pixbuf and -lgnomecanvaspixbuf)
+    if test "$have_gdk_pixbuf" != "yes" ; then
+	AC_BEAST_PIXBUF_CHECK(-lgdk_pixbuf)
+    fi
+    if test "$have_gdk_pixbuf" != "yes" ; then
+	AC_BEAST_PIXBUF_CHECK(-lgnomecanvaspixbuf -lgdk_pixbuf)
+    fi
 
     dnl We need GLE also (and asume it is installed in the same
     dnl prefix as Gtk+ or GNOME)
