--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -1,9 +1,13 @@
 ## Generated data (by make Makefile.icons)
 icon_list += ball.c
+icon_list += mic.c
+icon_list += sinstrument.c
 icon_list += snet.c
 icon_list += song.c
 icon_list += ball.xcf
+icon_list += mic.xcf
 icon_list += sheet.xcf
+icon_list += sinstrument.xcf
 icon_list += snet.xcf
 icon_list += song.xcf
 ## Generated data ends here
