added cool new canyon delay module from David A. Bartold
Sun Feb  6 07:43:28 2000  Tim Janik  <timj@gtk.org>

        * davcanyondelay.[hc]: added cool new canyon delay module from
        David A. Bartold <foxx@mail.utexas.edu>.

Sat Feb  5 18:35:37 2000  Tim Janik  <timj@gtk.org>

        * bsemult.c:
        * bsenoise.c:
        * bsefirfilter.c:
        * bseadder.c:
        * davorgan.c:
        * davsyndrum.c:
        * bsemixer.c:
        * bsegenosc.c: canonicalized input and output channel names, this breaks
        links in already saved .bse files, but we have to be consistent here in
        the long run.

svn path=/trunk/; revision=188

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -67,6 +67,14 @@ bsenoise_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS         += bsenoise.h
 
 ##
+## Plugin davcanyondelay
+##
+davcanyondelay_la_SOURCES = davcanyondelay.c
+davcanyondelay_la_LDFLAGS = -module -avoid-version
+davcanyondelay_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS         += davcanyondelay.h
+
+##
 ## Plugin davorgan
 ##
 davorgan_la_SOURCES = davorgan.c
@@ -113,6 +121,7 @@ plugin_LTLIBRARIES += \
 	bsemixer.la \
 	bsemult.la \
 	bsenoise.la \
+	davcanyondelay.la \
 	davorgan.la \
 	davsyndrum.la \
 	fldbsepattern.la \
