new widget to maintain radio selections that can build toolbars, menus (to
Tue Feb  8 09:24:11 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstradiotools.[hc]: new widget to maintain radio selections
        that can build toolbars, menus (to be implemented) and a palette
        container with description for the radio controls.

        * beast-gtk/bstsnetrouter.c: build the toolbar via BstRadioTools and
        feature a palette dialog.

svn path=/trunk/; revision=196

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -47,6 +47,7 @@ beast_headers = $(strip \
 	bstpatternview.h \
 	bstpreferences.h \
 	bstprocedure.h \
+	bstradiotools.h \
 	bstsamplerepo.h \
 	bstsampleshell.h \
 	bstsnetshell.h \
@@ -80,6 +81,7 @@ beast_sources = $(strip \
 	bstpatternview.c \
 	bstpreferences.c \
 	bstprocedure.c \
+	bstradiotools.c \
 	bstsamplerepo.c \
 	bstsampleshell.c \
 	bstsnetshell.c \
