--- a/beast-gtk/icons/Makefile.icons
+++ b/beast-gtk/icons/Makefile.icons
@@ -4,12 +4,14 @@ icon_list += mouse_tool.c
 icon_list += no_ilink.c
 icon_list += no_olink.c
 icon_list += noicon.c
+icon_list += palette.c
 icon_list += properties.c
 icon_list += trash.c
 icon_list += close.xcf
 icon_list += mouse_tool.xcf
 icon_list += no_olink.xcf
 icon_list += noicon.xcf
+icon_list += palette.xcf
 icon_list += properties.xcf
 icon_list += trash.xcf
 ## Generated data ends here
