faq stuff from Dave: makefaq.py updates, renamed faq.src to faq.dat.
Wed Feb  9 00:47:06 2000  Tim Janik  <timj@gtk.org>

        * docs/Makefile.am:
        * docs/makefaq.py:
        * docs/faq.src:
        * docs/faq.dat:
        faq stuff from Dave: makefaq.py updates, renamed faq.src to faq.dat.

svn path=/trunk/; revision=197

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -9,7 +9,7 @@ private_docs = $(strip \
 	bse-typesystem.txt \
 )
 build_tools = $(strip \
-	faq.src \
+	faq.dat \
 	text.1.faq \
 	text.2.faq \
 	makefaq.py \
@@ -22,8 +22,8 @@ docsdir = ${beastdocsdir}
 docs_DATA = ${public_docs}
 
 
-faq.txt: @MISSING_PYTHON@ @MISSING_FOLD@ faq.src makefaq.py
-	python makefaq.py -c Text | fold -s > faq.txt
+faq.txt: @MISSING_PYTHON@ @MISSING_FOLD@ faq.dat makefaq.py
+	python makefaq.py -c text -t text.1.faq -b text.2.faq -o STDOUT | fold -s > $@
 
 MAINTAINERCLEANFILES += $(built_sources)
 
