many overall GUI improvements, lots of GUI clean ups and fine tuning.
Thu Feb 10 11:51:28 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstprocedure.c:
        * beast-gtk/bstradiotools.c:
        * beast-gtk/bstparam.c:
        * beast-gtk/bstparamview.[hc]:
        * beast-gtk/bstitemview.[hc]:
        * beast-gtk/bstpatternview.[hc]:
        many overall GUI improvements, lots of GUI clean ups and fine tuning.
        clean ups of GUI code.

        * beast-gtk/bstdefs.h (enum): s/BST_ICON_TRASH/BST_ICON_DELETE/,
        added BST_ICON_PATTERN, BST_ICON_PATTERN_TOOL and BST_ICON_TRASHCAN.
        * beast-gtk/bstmain.c (bst_icon_from_stock): trashcan, trashsmall
        replacement, added pattern.

        * beast-gtk/icons/trashcan.c:
        * beast-gtk/icons/trashcan.xcf:
        new trashcan based on a png from tigert.

        * beast-gtk/icons/pattern.c:
        * beast-gtk/icons/pattern.xcf:
        * beast-gtk/icons/pattern-tool.c:
        * beast-gtk/icons/pattern-tool.xcf:
        new BsePattern icon based on something from mc and panel.

svn path=/trunk/; revision=204

--- a/beast-gtk/icons/Makefile.icons
+++ b/beast-gtk/icons/Makefile.icons
@@ -5,13 +5,19 @@ icon_list += no_ilink.c
 icon_list += no_olink.c
 icon_list += noicon.c
 icon_list += palette.c
+icon_list += pattern-tool.c
+icon_list += pattern.c
 icon_list += properties.c
-icon_list += trash.c
+icon_list += trashcan.c
+icon_list += trashsmall.c
 icon_list += close.xcf
 icon_list += mouse_tool.xcf
 icon_list += no_olink.xcf
 icon_list += noicon.xcf
 icon_list += palette.xcf
+icon_list += pattern-tool.xcf
+icon_list += pattern.xcf
 icon_list += properties.xcf
-icon_list += trash.xcf
+icon_list += trashcan.xcf
+icon_list += trashsmall.xcf
 ## Generated data ends here
