added two more icons.
Wed Feb 16 01:07:48 2000  Tim Janik  <timj@gtk.org>

        * icons/drum.c:
        * icons/drum.xcf:
        * icons/organ.c:
        * icons/organ.xcf: added two more icons.

svn path=/trunk/; revision=208

--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -2,7 +2,9 @@
 icon_list += ampmix.c
 icon_list += any.c
 icon_list += atan.c
+icon_list += drum.c
 icon_list += noicon.c
+icon_list += organ.c
 icon_list += pipe.c
 icon_list += prod.c
 icon_list += sine.c
@@ -11,7 +13,9 @@ icon_list += sub.c
 icon_list += sum.c
 icon_list += ampmix.xcf
 icon_list += atan.xcf
+icon_list += drum.xcf
 icon_list += noicon.xcf
+icon_list += organ.xcf
 icon_list += pipe.xcf
 icon_list += prod.xcf
 icon_list += sine.xcf
